# barq-inference

./: .gitignore  CONTRIBUTING.md  Cargo.toml  GAP_ANALYSIS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml
advanced/: Cargo.toml
advanced/src/: batch_engine.rs  benchmarks.rs  continuous_batching.rs  flash_attention.rs  flash_mla.rs  lib.rs  logging.rs  metal_backend_integration.rs  metal_detect.rs  metrics.rs  metrics_server.rs  moe.rs  paged_attention.rs  prompt_cache.rs  rope_scaling.rs  speculative.rs  tensor_parallel.rs  uds_server.rs  wasm_candle.rs
backend/: Cargo.toml
backend/src/: buffer.rs  compute_graph.rs  cpu.rs  cuda.rs  cuda_flash_attn.rs  cuda_multi_gpu.rs  cuda_quant.rs  cuda_tensor_ops.rs  device.rs  lib.rs  metal.rs  tensor_ops.rs
barq-core/: Cargo.toml
barq-core/src/: tensor.rs
barq_core/: Cargo.toml
barq_core/src/: accelerate_blas.rs  attention.rs  blas.rs  context.rs  error.rs  gemm.rs  gguf.rs  lib.rs  memory.rs  metal_blas.rs  normalization.rs  ops.rs  ops_ref.rs  platform.rs  prelude.rs  prompt.rs  quant.rs  rope.rs  simd.rs  simd_softmax.rs  softmax.rs  tensor.rs  testing.rs
barq_core/src/grammar/: ast.rs  compile.rs  mod.rs  parser.rs
benches/: basic_bench.rs
cli/: Cargo.toml
cli/benches/: inference_bench.rs
cli/src/: benchmark.rs  debug_tokenizer.rs  main.rs  performance.rs  server.rs
cli/tests/integration/: coverage.rs  end_to_end.rs  fixtures.rs  memory.rs  mod.rs  model_loading.rs
core/: Cargo.toml
core/src/: attention.rs  gemm.rs  gguf.rs  lib.rs  memory.rs  normalization.rs  platform.rs  quant.rs  rope.rs  simd.rs  simd_softmax.rs  softmax.rs  tensor.rs
docs/: ARCHITECTURE.md  MIGRATION.md  PERFORMANCE.md  RELEASE.md  TESTING.md  USER_GUIDE.md
examples/: advanced_inference.rs  basic_inference.rs  benchmark.rs  simple_inference.rs
models/: Cargo.toml
models/src/: arch.rs  arch_registry.rs  cache_stats.rs  context.rs  deepseek.rs  ffn.rs  kv_cache.rs  lib.rs  llama.rs  llava.rs  loader.rs  mistral.rs  mixtral.rs  moe_fused.rs  prompt_cache.rs  qwen.rs  qwen2.rs  qwen2vl.rs  qwen3.rs  speculative_decode.rs  speculative_engine.rs  test_support.rs  transformer.rs  weight_cache.rs
models/src/vision/: mod.rs
quant/: Cargo.toml
quant/src/: blockwise.rs  ik_quant.rs  iq.rs  lib.rs  q2_k.rs  q3_k.rs  q4_0.rs  q4_k.rs  q5_k.rs  q8_kv.rs  simd_quant.rs
sampling/: Cargo.toml
sampling/src/: chain.rs  grammar_sampler.rs  lib.rs  min_p.rs  mirostat.rs  penalties.rs  sampler.rs  softmax.rs  temperature.rs  top_k.rs  top_p.rs  typical.rs  xtc.rs
sampling/src/json_mode/: mod.rs
tests/: integration_test.rs
vocab/: Cargo.toml
vocab/src/: bpe.rs  chat_template.rs  gguf_tokenizer.rs  lib.rs  prelude.rs  spm.rs  tokenizer.rs  tokenizer.rs.tmp  unigram.rs  vocab.rs  vocab.rs.tmp  wpm.rs
