[package]
name = "advanced"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Advanced research features for Barq inference engine"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }

# Additional dependencies for observability
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1"
chrono = { version = "0.4", features = ["serde"] }
bincode = "1.3"

barq_core = { path = "../barq_core" }
models = { path = "../models" }

[features]
default = []
