[package]
name = "backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Backend abstraction layer for Barq inference engine"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }

# GPU dependencies (optional)
cudarc = { version = "0.12", optional = true, features = ["cuda-11040"] }
metal = { version = "0.28", optional = true }

# System dependencies
libc = "0.2"

barq_core = { path = "../barq_core" }

[features]
default = []
cuda = ["dep:cudarc"]
metal = ["dep:metal"]
