[package]
name = "barq-inference"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for Barq inference engine"

[[bin]]
name = "barq-inference"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
itertools = { workspace = true }
num_cpus = "1.16"
bytes = "1"
futures-util = "0.3"

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
indicatif = "0.17"
console = "0.15"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
http-body-util = "0.1"

# GPU dependencies (optional)
cudarc = { version = "0.12", optional = true, features = ["cuda-11040"] }
metal = { version = "0.28", optional = true }

# Internal crates
barq_core = { path = "../barq_core" }
vocab = { path = "../vocab" }
models = { path = "../models" }
backend = { path = "../backend" }
sampling = { path = "../sampling" }
advanced = { path = "../advanced" }
quant = { path = "../quant" }

[features]
default = []
cuda = ["dep:cudarc", "backend/cuda"]
metal = ["dep:metal", "backend/metal"]
