[package]
name = "core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core tensor operations and memory management"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
ndarray = { workspace = true, features = ["std"] }
nalgebra = { workspace = true }
simba = { workspace = true }
wide = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
memmap2 = { workspace = true }
bytemuck = { workspace = true }
rayon = { workspace = true }
parking_lot = { workspace = true }
half = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
itertools = { workspace = true }

# Additional dependencies
ahash = "0.8"
rand = "0.8"
rand_chacha = "0.3"
byteorder = "1.5"

[dev-dependencies]
criterion = "0.5"
proptest = "1.5"

[features]
default = ["simd"]
simd = []
cuda = ["cudarc"]
metal = ["metal"]
