[package]
name = "quant"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Quantization algorithms for Barq inference engine"

[dependencies]
# Workspace dependencies
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

core = { path = "../core" }

[features]
default = []
