[package]
name = "sampling"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Token sampling strategies for Barq inference engine"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }

# Additional dependencies
rand = "0.8"
rand_chacha = "0.3"

core = { path = "../core" }

[dev-dependencies]
criterion = "0.5"
proptest = "1.5"

[features]
default = []
