[package]
name = "vocab"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Vocabulary and tokenization"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
itertools = { workspace = true }

# Additional dependencies
regex = "1.11"
unicode-segmentation = "1.12"
rust_tokenizers = "8.1"
hashbrown = "0.15"
aho-corasick = "1.1"

barq_core = { path = "../barq_core" }

[features]
default = []
